--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Easy Pancakes Recipe</title>
 </head>
 <body>
-    <h1>"Odin Recipes"</h1>
-    <a href="recipes/pancakes.html" target="_blank" rel="noopener norefferer">Easy Pancakes</a>
+    <h1>Easy Pancakes</h1>
 </body>
 </html>
