Add stir fry webpage to website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>"Odin Recipes"</h1>
     <a href="recipes/pancakes.html" target="_blank" rel="noopener norefferer">Easy Pancakes</a>
+    <a href="recipes/quick-beef-stir-fry.html" target="_blank" rel="noopener norefferer">Quick-Beef-Stir-Fry</a>
 </body>
 </html>
