Add soup recipe webpage to site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>"Odin Recipes"</h1>
-    <a href="recipes/pancakes.html" target="_blank" rel="noopener norefferer">Easy Pancakes</a>
-    <a href="recipes/quick-beef-stir-fry.html" target="_blank" rel="noopener norefferer">Quick-Beef-Stir-Fry</a>
+    <ul>
+        <li><a href="recipes/pancakes.html" target="_blank" rel="noopener norefferer">Easy Pancakes</a></li>
+        <li><a href="recipes/quick-beef-stir-fry.html" target="_blank" rel="noopener norefferer">Quick-Beef-Stir-Fry</a></li>
+        <li><a href="recipes/vegetable-soup.html" target="_blank" rel="noopener norefferer">Vegetable Soup</a></li>
+    </ul>
 </body>
 </html>
